# KeyLox

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  main.rs
src/app/: app.rs  credentials_storage.rs  encryption.rs  mod.rs  pbkdf.rs  vault_encryptor.rs
src/app/models/: credentials.rs  mod.rs  vault.rs  vault_security_params.rs
src/controller/: exit_controller.rs  init_controller.rs  main_credentials_controller.rs  master_password_controller.rs  mod.rs  new_password_controller.rs  specific_credential_controller.rs  website_credentials_controller.rs
src/models/: credentials.rs  mod.rs  vault.rs
src/ui/: footer.rs  helpers.rs  mod.rs  title.rs
src/ui/popups/: exit.rs  master_password_required.rs  mod.rs  new_password_required.rs
