[package]
name = "KeyLox"
version = "0.0.2"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
itertools = "0.12.1"
ratatui = "0.29.0"
serde = { version = "1.0.198", features = ["derive"] }
rmp-serde = "1.3.0"
aegis = { version = "0.6.13", features = ["pure-rust"] }
rand = "0.8.5"
argon2 = "0.5.3"

[profile.release]
opt-level = 2                # Maximum optimization for performance
lto = true                   # Enable Link Time Optimization (LTO)
panic = 'abort'              # Remove panic unwinding (smaller binary, faster)
debug = false                # Disable debug information
split-debuginfo = 'unpacked' # Option to split debug info if you need it for later analysis
codegen-units = 1            # Reduce the number of codegen units to increase optimization
incremental = false          # Disable incremental compilation to reduce binary size

[profile.dev.package."argon2"]
opt-level = 2 # Argon2 optimizations in debug for fast key derivation
